<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">待命名</string>
    <string name="main_bottom_tab_camera_caution">注意</string>
    <string name="loading">loading...</string>
    <string name="main_bottom_tab_camera_caution_content">请在"设置-权限管理"里面允许本应用调用摄像头.</string>
    <string name="http_error">请求出错!"</string>
    <string name="http_json_error">数据解析异常!"</string>
    <string name="str_confirm">确定</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="location_prefix">[my location]</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="dynamic_expression">[Dynamic expression]</string>
    <string name="voice_prefix">[Voice]</string>
    <string name="video_call">[Video call]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="were_mentioned">You were montioned</string>
    <string name="all_members">All members</string>
    <string name="prb_default_symbolic_string">$</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="call_duration">call duration</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Logoff_notification">Logoff notification</string>
    <string name="Remove_the_notification">Remove the notification</string>
    <string name="Download_the_pictures">Download the pictures: 0%</string>
    <string name="Download_the_pictures_new">Download the pictures:</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="Have_downloaded">Already downloaded</string>
    <string name="Did_not_download">Not yet downloaded</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="search_new">Search</string>
    <string name="gorup_not_found">Can not find this group</string>
    <string name="no_more_messages">no more messages</string>
    <string name="error_send_invalid_content">The message content is not allowed to be sent!</string>
    <string name="error_send_not_in_the_group">You already were not in the group</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="chongzhi_content">代理调整申请需经后台人工审核，这可能需要几天时间。请仔细核对调整范围，避免频繁修改。</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_account_detail">AccountDetailActivity</string>
    <!-- 启动页面文字 -->
    <string name="copyright">copyright @2016 ekeae.com</string>
    <string name="back_exit_tips">再按一次返回键退出应用</string>
    <string name="refresh_fail">刷新失败！</string>
    <string name="load_all_susses">已经全部加载完毕！</string>
    <string name="load_fail">加载失败！</string>
    <!-- 登录界面文字 -->

    <string name="login_input_phone">输入手机号码</string>
    <string name="bt_login">确定</string>
    <string name="bt_forget_password">密码重置 &#38;登录</string>
    <string name="house_detail_hint">温馨提示：所有付款请通过App自助操作,禁止易助理代付代缴，任何疑问请致电4001234567。</string>
    <string name="welcome_text">租房 买房 卖房</string>
    <string name="imagedetailfragment_io_error">下载错误</string>
    <string name="imagedetailfragment_decoding_error">图片无法显示</string>
    <string name="imagedetailfragment_network_denied">网络有问题，无法下载</string>
    <string name="imagedetailfragment_out_of_memory">图片太大无法显示</string>
    <string name="imagedetailfragment_unknown">未知的错误</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pay_hint1">1、租房首次支付不得低于3天租金,购房不得低于5000元。如遇额度限制可分批支付。</string>
    <string name="pay_hint2">2、所有付款请通过APP自助操作，禁止易助理代付代缴，任何疑问请致电</string>
    <string name="pay_hint3">1、支付如遇到额度限制可分批支付</string>
    <string name="pay_hint_phone">4001234567</string>
    <string name="subscribe_hint">后台查询到，TA当前可能处于忙碌状态,您的意见是...</string>
    <string name="title_activity_bottom_main">BottomMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>